--- a/main.css
+++ b/main.css
@@ -26,8 +26,11 @@ a {
 .intro {
 	font-family: 'Lato', sans-serif;
 	font-size: 35px;
-	font-weight: 900;
 	color: #18bff7;
+}
+
+h1 {
+	font-weight: 900!important;
 }
 
 .email {
