--- a/main.css
+++ b/main.css
@@ -52,9 +52,9 @@ h1 {
 .fa-linkedin-square {
 	color: #0077B5;
 }
-.fa-instagram {
+.fa-twitter {
 	padding-right: 10px;
-	color: #fb3958;
+	color: #00aced;
 }
 
 li {
