--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,9 @@ a .fa-linkedin-square {
 a .fa-twitter {
 	color: #00aced;
 }
+a .fa-instagram {
+	color: #e1306c;
+}
 .social a .fa {
 	padding: 0 10px 0 10px;
 }
